# minishell

./: .gitignore  1  1.txt  CMakeLists.txt  Makefile  a.out  file  hello.c  minishell  parsing.c  test.c  test.sh
functions_example/: a.out  example.c  ft_fstat.c  ft_getcwd.c  ft_getenv.c  ft_gettty.c  ft_stat.c  ft_stat2.c  test  test.c  test_rl.c  wiki.c
functions_example/termcamp/: a.out  main1.c  main2.c  main3.c  main4.c  main5.c  main6.c  test.c
functions_example/termcamp/a.out.dSYM/Contents/Resources/DWARF/: a.out
includes/: minishell.h  parser.h
libft/: Makefile  deque.c  deque_utils.c  free_list.c  ft_atoi.c  ft_calloc.c  ft_error.c  ft_isascii.c  ft_lstclear.c  ft_lstdelone.c  ft_lstfind.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memory.c  ft_strcmp.c  ft_substr.c  libft.h
libft/printf/: ft_parsing.c  ft_printf.c  ft_printf.h  ft_printf_utils.c  ft_printf_utils_2.c  ft_printing_chars.c  ft_printing_number.c  ft_printing_pointer.c
parsing/: a.out  changeLetter.c  changeSpace.c  main_parser.c  main_parser.txt  parse.c  parser.c  parser_pipe.c  parser_red.c  parser_red2.c  parser_split.c  parser_str.c  parser_token.c  parser_urils1.c  parser_utils2.c  parser_utils3.c  preparser.c  signals_interactive_shell.c  signals_non_interactive_shell.c  token.c
sources/: minishell.c
sources/builtins/: cd.c  echo.c  env.c  exit.c  export.c  export_utils.c  find_builtins.c  heredoc.c  list_to_array.c  minishell.c  pipex.c  pipex.txt  pipex_utils.c  pwd.c  unset.c  utils.c
sources/pipex/: heredoc.c  pipex.c  pipex_utils.c
sources/utils/: change_shlvl.c  list_to_array.c  search_value_by_key.c  utils.c
tester/: minishell
